# takenokoAI

./: .gitignore  CLAUDE.md  DESIGN_REVIEW.md  LICENSE  README.md  TODO.md  character.md  diary.md  main.py  notes  open_llm_vtuber_analysis.md  prompt_writing_guide.md  pyproject.toml  self.md  self_md_rewrite_plan.md
.claude/: settings.local.json
admin/: debug_api.py  run_agent.py  run_viz.py  visualization_app.py  viz_ui.html
admin/utests/: conftest.py  test_audio.py  test_browser.py  test_bus.py  test_capabilities.py  test_families.py  test_llm.py  test_logging.py  test_main.py  test_modules.py  test_permissions.py  test_submodule_base.py
admin/yamls/: default.yaml
evaluation/: ev_main_module.py  ev_rulebook.md
interface/: audio.py  browser_session.py  bus.py  capabilities.py  character_model.py  llm.py  logging.py  markdown_utils.py  message_codec.py  modules.py  permissions.py  prompt_assembler.py
memorization/: me_main_module.py  me_rulebook.md
memorization/me_submodules/: me_rules.py
motion/: mo_main_module.py  mo_rulebook.md
motion/mo_submodules/: mo_audio.py  mo_browser.py
prediction/: pr_main_module.py  pr_rulebook.md
prompts/characters/: character.md
prompts/identity/: ev_identity.md  me_identity.md  mo_identity.md  pr_identity.md  re_identity.md
reaction/: re_main_module.py  re_rulebook.md
reaction/re_submodules/: re_audio.py  re_browser.py
submodules/: __init__.py
submodules/Me/: me_rules.py
submodules/Mo/: mo_audio.py  mo_browser.py
submodules/Re/: re_audio.py  re_browser.py
