[project]
name = "takenoko-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
debug = ["fastapi>=0.100", "uvicorn>=0.20"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["interface", "reaction", "prediction", "evaluation", "memorization", "motion", "admin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
